--- a/userChrome.css
+++ b/userChrome.css
@@ -57,6 +57,52 @@ tab.tabbrowser-tab *{
 /*============================================================================================*/
 /* NAV BAR */
 
+#urlbar .search-one-offs {
+  display: none !important;
+}
+
+/* Ensure the navigator toolbox is positioned correctly */
+#navigator-toolbox {
+  position: fixed !important; /* Ensure it stays at the top */
+  top: 0; /* Align to the top of the window */
+  left: 0; /* Align to the left of the window */
+  width: 100%; /* Full width */
+  z-index: 1; /* Ensure it is above other elements */
+}
+
+/* Hide the nav bar by default */
+#nav-bar {
+  min-height: 0 !important;
+  max-height: 0 !important;
+  height: 0 !important;
+  opacity: 0;
+  transition: all 0.3s ease;
+  overflow: hidden;
+  position: fixed; /* Ensure it is fixed to the top */
+  top: 0; /* Align to the top of the window */
+  left: 0; /* Align to the left of the window */
+  width: 100%; /* Full width */
+}
+
+/* Show on hover */
+#nav-bar:hover,
+#navigator-toolbox:focus-within #nav-bar,
+#navigator-toolbox:hover #nav-bar {
+  min-height: 50px !important;
+  max-height: 50px !important;
+  height: 50px !important;
+  opacity: 1;
+}
+
+/* Ensure tabs touch the top of the window when URL bar is hidden */
+#titlebar {
+  margin-bottom: 0 !important;
+}
+
+#navigator-toolbox:hover #nav-bar::after {
+  opacity: 1;
+}
+
 #PanelUI-menu-button,
 #undo-closed-tab,
 #addon_darkreader_org-browser-action,
@@ -65,6 +111,7 @@ tab.tabbrowser-tab *{
 #fxa-toolbar-menu-button,
 #downloads-button {
   transform: translateY(5px) !important;
+  transform: translateX(-40px) !important;
 }
 
 /* Hide X top-left */
@@ -222,7 +269,7 @@ tab,
     height: 32px !important; 
     width: 32px !important; 
     border-radius: 10px !important;
- }
+}
 
 @media (prefers-color-scheme: dark) {
   .tab-icon-image {
@@ -328,7 +375,6 @@ tab,
 }
 
 #main-window #urlbar {
-    z-index: 9999 !important;
     width: 100% !important;
     margin-top: 0 !important;
     margin-left: 0 !important;
@@ -672,7 +718,7 @@ tab,
   width: var(--sidebar-width) !important;
   max-width: var(--sidebar-width) !important;
   padding-left: 3px !important;
-  margin-top: -5px !important;
+  margin-top: 40px !important;
   margin-bottom: -5px !important;
   z-index: 1;
 }
@@ -816,7 +862,3 @@ tab,
   border-radius: 10px !important;
   text-align: center  !important;
 }
-
-
-
-
